Added feedback and general inputs

--- a/industry-request.html
+++ b/industry-request.html
@@ -398,6 +398,91 @@
                                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                                 </div>
                             </div>
+                            <div class="col-md-12" id="feedback-sec">
+                                <div>
+                                    <h2>Feedback</h2>
+                                </div>
+                                <div class="col-md-12 mb-4">
+                                    <div class="border rounded p-4">
+                                        <div>
+                                            Are you satisfied with the report provided by the BI Team? (Select one)
+                                        </div>
+                                        <div id="feed-options" class="mt-4">
+                                            <div class="feed-option">
+                                                <input type="radio" name="site" id="good" value="" />
+                                                <label for="good">
+                                                    <img class="default-smiley" src="/img/happy.png" alt="">
+                                                    <img class="selected-smiley" src="/img/happy-selected.png" alt="">
+                                                </label>
+                                            </div>
+                                            <div class="feed-option">
+                                                <input type="radio" name="site" id="bad" value="" />
+                                                <label for="bad">
+                                                    <img class="default-smiley" src="/img/sad.png" alt="">
+                                                    <img class="selected-smiley" src="/img/sad-selected.png" alt="">
+                                                </label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-12 mb-4">
+                                    <div class="border rounded p-4">
+                                        <div>
+                                            Are you satisfied with the response time of the BI Team? (Select one)
+                                        </div>
+                                        <div id="feed-options" class="mt-4">
+                                            <div class="feed-option">
+                                                <input type="radio" name="site" id="good" value="" />
+                                                <label for="good">
+                                                    <img class="default-smiley" src="/img/happy.png" alt="">
+                                                    <img class="selected-smiley" src="/img/happy-selected.png" alt="">
+                                                </label>
+                                            </div>
+                                            <div class="feed-option">
+                                                <input type="radio" name="site" id="bad" value="" />
+                                                <label for="bad">
+                                                    <img class="default-smiley" src="/img/sad.png" alt="">
+                                                    <img class="selected-smiley" src="/img/sad-selected.png" alt="">
+                                                </label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-12 mb-4">
+                                    <div class="border rounded p-4">
+                                        <div>
+                                            Are you satisfied with the service provided by the chosen expert? (Select
+                                            one)
+                                        </div>
+                                        <div id="feed-options" class="mt-4">
+                                            <div class="feed-option">
+                                                <input type="radio" name="site" id="good" value="" />
+                                                <label for="good">
+                                                    <img class="default-smiley" src="/img/happy.png" alt="">
+                                                    <img class="selected-smiley" src="/img/happy-selected.png" alt="">
+                                                </label>
+                                            </div>
+                                            <div class="feed-option">
+                                                <input type="radio" name="site" id="bad" value="" />
+                                                <label for="bad">
+                                                    <img class="default-smiley" src="/img/sad.png" alt="">
+                                                    <img class="selected-smiley" src="/img/sad-selected.png" alt="">
+                                                </label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label for="exampleFormControlTextarea1">What do you believe should be improved
+                                            for
+                                            next time?</label>
+                                        <textarea class="form-control" id="exampleFormControlTextarea1"
+                                            rows="3"></textarea>
+                                    </div>
+                                </div>
+                            </div>
+
 
                             <!-- ends -->
                             <div class="col-md-12">
