--- a/market-request.html
+++ b/market-request.html
@@ -254,6 +254,141 @@
                                 </div>
                             </div>
                             <div class="col-md-12">
+                                <div class="form-group">
+                                    <label for="exampleFormControlTextarea1">Comments by Admin</label>
+                                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                                </div>
+                            </div>
+                            <div class="col-md-12">
+                                <div class="form-group">
+                                    <label for="exampleFormControlTextarea1">Description of the attachment</label>
+                                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                                </div>
+                            </div>
+                            <div class="col-md-12">
+                                <div class="form-group">
+                                    <label>Additional Attachments</label>
+                                    <input type="file" class="form-control border-0" placeholder="Requester"
+                                        value="Requester">
+                                </div>
+                            </div>
+                            <div class="col-md-12">
+                                <div class="form-group">
+                                    <label>Post Meeting Attachment</label>
+                                    <input type="file" class="form-control border-0" placeholder="Requester"
+                                        value="Requester">
+                                </div>
+                            </div>
+                            <div class="col-md-12">
+                                <div class="form-group">
+                                    <label>MoM</label>
+                                    <input type="file" class="form-control border-0" placeholder="Requester"
+                                        value="Requester">
+                                </div>
+                            </div>
+                            <div class="col-md-12">
+                                <div class="form-group">
+                                    <label>Credits</label>
+                                    <select class="custom-select">
+                                        <option selected>Please Select</option>
+                                        <option value="1">1</option>
+                                        <option value="2">2</option>
+                                        <option value="3">3</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="col-md-12">
+                                <div class="form-group">
+                                    <label>TAT</label>
+                                    <input type="text" class="form-control" placeholder="TAT">
+                                </div>
+                            </div>
+                            <div class="col-md-12" id="feedback-sec">
+                                <div>
+                                    <h2>Feedback</h2>
+                                </div>
+                                <div class="col-md-12 mb-4">
+                                    <div class="border rounded p-4">
+                                        <div>
+                                            Are you satisfied with the report provided by the BI Team? (Select one)
+                                        </div>
+                                        <div id="feed-options" class="mt-4">
+                                            <div class="feed-option">
+                                                <input type="radio" name="site" id="good" value="" />
+                                                <label for="good">
+                                                    <img class="default-smiley" src="/img/happy.png" alt="">
+                                                    <img class="selected-smiley" src="/img/happy-selected.png" alt="">
+                                                </label>
+                                            </div>
+                                            <div class="feed-option">
+                                                <input type="radio" name="site" id="bad" value="" />
+                                                <label for="bad">
+                                                    <img class="default-smiley" src="/img/sad.png" alt="">
+                                                    <img class="selected-smiley" src="/img/sad-selected.png" alt="">
+                                                </label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-12 mb-4">
+                                    <div class="border rounded p-4">
+                                        <div>
+                                            Are you satisfied with the response time of the BI Team? (Select one)
+                                        </div>
+                                        <div id="feed-options" class="mt-4">
+                                            <div class="feed-option">
+                                                <input type="radio" name="site" id="good" value="" />
+                                                <label for="good">
+                                                    <img class="default-smiley" src="/img/happy.png" alt="">
+                                                    <img class="selected-smiley" src="/img/happy-selected.png" alt="">
+                                                </label>
+                                            </div>
+                                            <div class="feed-option">
+                                                <input type="radio" name="site" id="bad" value="" />
+                                                <label for="bad">
+                                                    <img class="default-smiley" src="/img/sad.png" alt="">
+                                                    <img class="selected-smiley" src="/img/sad-selected.png" alt="">
+                                                </label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-12 mb-4">
+                                    <div class="border rounded p-4">
+                                        <div>
+                                            Are you satisfied with the service provided by the chosen expert? (Select
+                                            one)
+                                        </div>
+                                        <div id="feed-options" class="mt-4">
+                                            <div class="feed-option">
+                                                <input type="radio" name="site" id="good" value="" />
+                                                <label for="good">
+                                                    <img class="default-smiley" src="/img/happy.png" alt="">
+                                                    <img class="selected-smiley" src="/img/happy-selected.png" alt="">
+                                                </label>
+                                            </div>
+                                            <div class="feed-option">
+                                                <input type="radio" name="site" id="bad" value="" />
+                                                <label for="bad">
+                                                    <img class="default-smiley" src="/img/sad.png" alt="">
+                                                    <img class="selected-smiley" src="/img/sad-selected.png" alt="">
+                                                </label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label for="exampleFormControlTextarea1">What do you believe should be improved
+                                            for
+                                            next time?</label>
+                                        <textarea class="form-control" id="exampleFormControlTextarea1"
+                                            rows="3"></textarea>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-md-12">
                                 <p>
                                     <i>
                                         Note: Turnaround time for Market Access Report for a single product is 4 to 6
